@@ -172,4 +172,28 @@
 			<field name="metaKeywords" indexed="no" stored="compress" />
 		</fields>
 	</schema>
+
+	<statistics>
+		<statistic type="SEARCH" period="MINUTE" maxRetention="60"
+			writeToLog="no" />
+		<statistic type="SEARCH" period="HOUR" maxRetention="24"
+			writeToLog="yes" />
+		<statistic type="SEARCH" period="DAY" maxRetention="30"
+			writeToLog="yes" />
+		<statistic type="UPDATE" period="HOUR" maxRetention="24"
+			writeToLog="yes" />
+		<statistic type="UPDATE" period="DAY" maxRetention="30"
+			writeToLog="yes" />
+		<statistic type="DELETE" period="HOUR" maxRetention="24"
+			writeToLog="yes" />
+		<statistic type="DELETE" period="DAY" maxRetention="30"
+			writeToLog="yes" />
+		<statistic type="RELOAD" period="HOUR" maxRetention="24"
+			writeToLog="yes" />
+		<statistic type="RELOAD" period="DAY" maxRetention="30"
+			writeToLog="yes" />
+		<statistic type="OPTIMIZE" period="DAY" maxRetention="30"
+			writeToLog="yes" />
+	</statistics>
+
 </configuration>
