@@ -9,6 +9,7 @@ http://sourceforge.net/tracker/?group_id=260863
 Open Search Server 1.2
 
 New features:
+- 2956498: Provide a way to send statistics report by email
 - 2953803: Upgrade to PDFBox 1.0	
 - 2953802: Upgrade to POI 3.6
 - 2953577: Upgrade to Zkoss version 3.6.3
